--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "async": "0.2.9",
     "cheerio": "~0.13.0",
+    "deferred": "^0.7.2",
     "memwatch": "~0.2.2",
     "mongodb": "~1.3.23",
     "nconf": "~0.6.9",
